--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       <p style="text-indent:2em;">
         I am currently a first-year Ph.D student in The 
         Hong Kong Polytechnic University, fortunately supervised by <a href="https://www4.comp.polyu.edu.hk/~hongxyang/" target="_blank">Prof. Hongxia Yang</a> at PolyU and <a href="https://pacman.cs.tsinghua.edu.cn/~cwg/" target="_blank">Prof. Wenguang Chen</a> at Tsinghua University.
-        Earlier, I obtained my master degree at University of Science and Technology of China (USTC), supervised by <a href="https://en.auto.ustc.edu.cn/2021/0616/c26828a513186/page.htm" target="_blank">Prof. Yong Wang</a>.
+      </p>
+      <p style="text-indent:2em;">Earlier, I obtained my master degree at University of Science and Technology of China (USTC), 
+        supervised by <a href="https://en.auto.ustc.edu.cn/2021/0616/c26828a513186/page.htm" target="_blank">Prof. Yong Wang</a>. 
       </p>
       <p style="text-indent:2em;">My research interests are to develop efficient AI Infra and AI System. Recently, I focus on develop 
         low-resource training and inference algorithms for Large Language Models (LLMs). 
@@ -77,7 +79,7 @@
         </a>.</li>
         <li> [2025.02]: We release <a href="https://arxiv.org/abs/2502.11573" target="_blank">InfiR : Crafting Effective Small Language Models and Multimodal Small Language Models in Reasoning
         </a>.</li>
-        <li> [2025.01] Start the PHD journal at PolyU</a></li>
+        <li> [2025.01]: Start the PHD journal at PolyU</a></li>
         <li> [2024.07]: Join Tencent IEG as a Algorithm Engineer <br> </li>
         <li> [2024.06]: Awarded the Outstanding Graduate Student at USTC <br> </li>
         <li> [2023.06]: Join Ant Group NextEVO as a AI Infra Engineer Intern <br> </li>
