--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <table class="pub_table">
         <tr>
           <td class="pub_td1"><img width="200" img src="./images/infijanice.jpg" class="papericon"></td>
-          <td class="pub_td2"><b>Zhen Li</b>, Yupeng Su, Songmiao Wang, Runming Yang, Congkai Xie, Aofan Liu, Ming Li, Jiannong Cao, Yuan Xie, Ngai Wong<sup>✉</sup>, Hongxia Yang<sup>✉</sup>
+          <td class="pub_td2"><b>Zhen Li<sup>*</sup></b>, Yupeng Su<sup>*</sup>, Songmiao Wang, Runming Yang, Congkai Xie, Aofan Liu, Ming Li, Jiannong Cao, Yuan Xie, Ngai Wong<sup>✉</sup>, Hongxia Yang<sup>✉</sup>
             <br><b>InfiJanice: Joint Analysis and In-situ Correction Engine for Quantization-Induced Math Degradation in Large Language Models</b>
             <br>
             [<a href="https://arxiv.org/abs/2505.11574" target="_blank">arXiv</a>]
@@ -108,8 +108,8 @@
           href="#top">[back top]</a></h2>
       <ul>
         <li> Algorithm Engineer, Tencent Interactive Entertainment Group (IEG), 2024.07 - 2024.11 </li>
-        <li> AI Infra Engineer (Intern), Ant Group NextEVO Research Center, 2023.06 - 2024.04 </li>
-        <li> Algorithm Engineer Intern, AMD Xilinx DeePhi, 2022.10 - 2024.05 </li>
+        <li> AI Infra Engineer Intern, Ant Group NextEVO Research Center, 2023.06 - 2024.04 </li>
+        <li> Research Intern, AMD Xilinx DeePhi, 2022.10 - 2024.05 </li>
         <li> Research Intern, iFlytek Technology Research Institute, 2022.06 - 2022.09 </li>
       </ul>
 
